--- a/karpenter/add-karpenter-daemonset-priority-class/kyverno-test.yaml
+++ b/karpenter/add-karpenter-daemonset-priority-class/kyverno-test.yaml
@@ -9,8 +9,8 @@ resources:
 results:
 - kind: DaemonSet
   patchedResource: daemonset-patched.yaml
-  policy: test/add-karpenter-daemonset-priority-class
+  policy: add-karpenter-daemonset-priority-class
   resources:
-  - test
+  - test/test
   result: pass
   rule: add-karpenter-daemonset-priority-class
