--- a/karpenter/set-karpenter-non-cpu-limits/kyverno-test.yaml
+++ b/karpenter/set-karpenter-non-cpu-limits/kyverno-test.yaml
@@ -9,57 +9,57 @@ resources:
 results:
 - kind: Pod
   patchedResource: pod-ephemeral-storage-patched1.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test1
+  - test/test1
   result: pass
   rule: set-ephemeral-storage
 - kind: Pod
   patchedResource: pod-ephemeral-storage-patched2.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test2
+  - test/test2
   result: pass
   rule: set-ephemeral-storage
 - kind: Pod
   patchedResource: pod-ephemeral-storage-patched3.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test3
+  - test/test3
   result: pass
   rule: set-ephemeral-storage
 - kind: Pod
   patchedResource: pod-ephemeral-storage-patched4.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test4
+  - test/test4
   result: pass
   rule: set-ephemeral-storage
 - kind: Pod
   patchedResource: pod-memory-patched1.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test1
+  - test/test1
   result: pass
   rule: set-memory
 - kind: Pod
   patchedResource: pod-memory-patched2.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test2
+  - test/test2
   result: pass
   rule: set-memory
 - kind: Pod
   patchedResource: pod-memory-patched3.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test3
+  - test/test3
   result: pass
   rule: set-memory
 - kind: Pod
   patchedResource: pod-memory-patched4.yaml
-  policy: test/set-karpenter-non-cpu-limits
+  policy: set-karpenter-non-cpu-limits
   resources:
-  - test4
+  - test/test4
   result: skip
   rule: set-memory
