--- a/other/b-d/disallow-all-secrets/kyverno-test.yaml
+++ b/other/b-d/disallow-all-secrets/kyverno-test.yaml
@@ -8,41 +8,41 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  policy: default/no-secrets
+  policy: no-secrets
   resources:
-  - secret-env-pod
+  - default/secret-env-pod
   result: fail
   rule: secrets-not-from-env
 - kind: Pod
-  policy: default/no-secrets
+  policy: no-secrets
   resources:
-  - secret-ref-pod
-  - secret-vol-pod
+  - default/secret-ref-pod
+  - default/secret-vol-pod
   result: pass
   rule: secrets-not-from-env
 - kind: Pod
-  policy: default/no-secrets
+  policy: no-secrets
   resources:
-  - secret-ref-pod
+  - default/secret-ref-pod
   result: fail
   rule: secrets-not-from-envfrom
 - kind: Pod
-  policy: default/no-secrets
+  policy: no-secrets
   resources:
-  - secret-env-pod
-  - secret-vol-pod
+  - default/secret-env-pod
+  - default/secret-vol-pod
   result: pass
   rule: secrets-not-from-envfrom
 - kind: Pod
-  policy: default/no-secrets
+  policy: no-secrets
   resources:
-  - secret-vol-pod
+  - default/secret-vol-pod
   result: fail
   rule: secrets-not-from-volumes
 - kind: Pod
-  policy: default/no-secrets
+  policy: no-secrets
   resources:
-  - secret-env-pod
-  - secret-ref-pod
+  - default/secret-env-pod
+  - default/secret-ref-pod
   result: pass
   rule: secrets-not-from-volumes
