--- a/other/res/restrict-deprecated-registry/kyverno-test.yaml
+++ b/other/res/restrict-deprecated-registry/kyverno-test.yaml
@@ -8,14 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  policy: policy-test/restrict-deprecated-registry
+  policy: restrict-deprecated-registry
   resources:
-  - test-pod-bad
+  - policy-test/test-pod-bad
   result: fail
   rule: restrict-deprecated-registry
 - kind: Pod
-  policy: policy-test/restrict-deprecated-registry
+  policy: restrict-deprecated-registry
   resources:
-  - test-pod-good
+  - policy-test/test-pod-good
   result: pass
   rule: restrict-deprecated-registry
