--- a/other/res/restrict-ingress-classes/kyverno-test.yaml
+++ b/other/res/restrict-ingress-classes/kyverno-test.yaml
@@ -8,14 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: Ingress
-  policy: default/restrict-ingress-classes
+  policy: restrict-ingress-classes
   resources:
-  - minimal-ingress-2
+  - default/minimal-ingress-2
   result: fail
   rule: validate-ingress
 - kind: Ingress
-  policy: default/restrict-ingress-classes
+  policy: restrict-ingress-classes
   resources:
-  - minimal-ingress-1
+  - default/minimal-ingress-1
   result: pass
   rule: validate-ingress
