--- a/other/res/restrict-ingress-defaultbackend/kyverno-test.yaml
+++ b/other/res/restrict-ingress-defaultbackend/kyverno-test.yaml
@@ -8,14 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: Ingress
-  policy: default/restrict-ingress-defaultbackend
+  policy: restrict-ingress-defaultbackend
   resources:
-  - sample-app-1
+  - default/sample-app-1
   result: fail
   rule: restrict-ingress-defaultbackend
 - kind: Ingress
-  policy: default/restrict-ingress-defaultbackend
+  policy: restrict-ingress-defaultbackend
   resources:
-  - sample-app-2
+  - default/sample-app-2
   result: pass
   rule: restrict-ingress-defaultbackend
