--- a/other/res/restrict-loadbalancer/kyverno-test.yaml
+++ b/other/res/restrict-loadbalancer/kyverno-test.yaml
@@ -8,14 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: Service
-  policy: default/no-loadbalancer-service
+  policy: no-loadbalancer-service
   resources:
-  - my-service-1
+  - default/my-service-1
   result: fail
   rule: no-LoadBalancer
 - kind: Service
-  policy: default/no-loadbalancer-service
+  policy: no-loadbalancer-service
   resources:
-  - my-service-2
+  - default/my-service-2
   result: pass
   rule: no-LoadBalancer
