chore: add myself in artifacthub owners
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -3,3 +3,5 @@ repositoryID: 231d81b2-c91a-4a4b-907e-67c0a863e8fa
 owners:
   - name: Chip Zoller
     email: chipzoller@gmail.com
+  - name: Charles-Edouard Brétéché
+    email: charled.breteche@gmail.com
