--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Set up Go 
         uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
         with:
-          go-version: "1.20"
+          go-version: ~1.21.1
 
       - name: Test Policy
         run: go run ./cmd/cli/kubectl-kyverno test ../policies
@@ -108,7 +108,7 @@ jobs:
       - name: Set up Go 
         uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
         with:
-          go-version: "1.20"
+          go-version: ~1.21.1
       - name: Lint policies
         run: |
           set -e
