--- a/argo/application-field-validation/application-field-validation.yaml
+++ b/argo/application-field-validation/application-field-validation.yaml
@@ -1,56 +1,57 @@
+---
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: application-field-validation
   annotations:
-    policies.kyverno.io/title: Application Field Validation
+    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.6.0
     policies.kyverno.io/category: Argo
+    policies.kyverno.io/description: This policy performs some best practices validation
+      on Application fields. Path or chart must be specified but never both. And destination.name
+      or destination.server must be specified but never both.
+    policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Application
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
-    policies.kyverno.io/description: >-
-      This policy performs some best practices validation on Application fields.
-      Path or chart must be specified but never both. And destination.name or
-      destination.server must be specified but never both.
+    policies.kyverno.io/title: Application Field Validation
+  name: application-field-validation
 spec:
-  validationFailureAction: audit
+  admission: true
   background: true
   rules:
-    - name: source-path-chart
-      match:
-        any:
-        - resources:
-            kinds:
-            - Application
-      validate:
-        message: >-
-          `spec.source.path` OR `spec.source.chart` should be specified but never both.
-        anyPattern:
-        - spec:
-            source:
-              path: '?*'
-              X(chart):
-        - spec:
-            source:
-              X(path):
-              chart: '?*'
-    - name: destination-server-name
-      match:
-        any:
-        - resources:
-            kinds:
-            - Application
-      validate:
-        message: >-
-          `spec.destination.server` OR `spec.destination.name` should be specified but never both.
-        anyPattern:
-        - spec:
-            destination:
-              server: '?*'
-              X(name):
-        - spec:
-            destination:
-              X(server):
-              name: '?*'
+  - match:
+      any:
+      - resources:
+          kinds:
+          - Application
+    name: source-path-chart
+    validate:
+      anyPattern:
+      - spec:
+          source:
+            X(chart): null
+            path: ?*
+      - spec:
+          source:
+            X(path): null
+            chart: ?*
+      message: '`spec.source.path` OR `spec.source.chart` should be specified but
+        never both.'
+  - match:
+      any:
+      - resources:
+          kinds:
+          - Application
+    name: destination-server-name
+    validate:
+      anyPattern:
+      - spec:
+          destination:
+            X(name): null
+            server: ?*
+      - spec:
+          destination:
+            X(server): null
+            name: ?*
+      message: '`spec.destination.server` OR `spec.destination.name` should be specified
+        but never both.'
+  validationFailureAction: Audit
