--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,57 +23,9 @@ jobs:
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
           path: policies
-
       - name: Validate all policies
-        run: |
-          #!/bin/bash
-          set -euo pipefail
-
-          # Loop through each policy directory in the repository
-          for policy_dir in $(find "$GITHUB_WORKSPACE" -type d ! -name '.*' ! -path '*/\.*'); do
-            # Skip the root directory
-            if [[ "$policy_dir" == "$GITHUB_WORKSPACE" ]]; then
-              continue
-            fi
-
-            # Skip directories that contain subdirectories
-            if find "$policy_dir" -mindepth 1 -type d -print -quit | read; then
-              # If it does, skip the filename validation
-              continue
-            fi
-
-            # Get the name of the directory
-            dir_name=$(basename "$policy_dir")
-
-            # Skip if it is the CRDs directory
-            if [[ $dir_name =~ ^.*CRDs.*$ ]]; then
-              continue
-            fi
-
-            # Check if the directory name only contains alphanumeric characters and dashes
-            if [[ ! $dir_name =~ ^[a-zA-Z0-9-]+$ ]]; then
-              echo "Directory $dir_name contains invalid characters. Only alphanumeric characters and dashes are allowed."
-              exit 1
-            fi
-
-            # Skip if the directory contains a kustomization.yaml file
-            if [[ -f "$policy_dir/kustomization.yaml" ]]; then
-              continue
-            fi
-
-            # Check if a .yml or .yaml file with the same name as the directory exists in the directory
-            if [[ ! -f "$policy_dir/$dir_name.yml" ]] && [[ ! -f "$policy_dir/$dir_name.yaml" ]]; then
-              echo "No .yml or .yaml file named $dir_name found in directory $policy_dir"
-              exit 1
-            fi
-
-            # Validate that artifacthub-pkg.yml or artifacthub-pkg.yaml file is found in the same folder as the policy
-            if [[ ! -f "$policy_dir/artifacthub-pkg.yml" ]] && [[ ! -f "$policy_dir/artifacthub-pkg.yaml" ]]; then
-              echo "artifacthub-pkg.yml or artifacthub-pkg.yaml file is not found in the same folder as the policy in directory $policy_dir"
-              exit 1
-            fi
-          done  
-
+        run: ./.hack/verify-files-structure.sh
+        working-directory: policies
       - name: Clone Kyverno
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
@@ -81,12 +33,10 @@ jobs:
           path: kyverno
           # The target branch of a pull request or the branch/tag of a push
           ref: ${{ github.base_ref || github.ref_name }}
-
       - name: Set up Go 
         uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
         with:
           go-version: ~1.21.1
-
       - name: Test Policy
         run: go run ./cmd/cli/kubectl-kyverno test ../policies
         working-directory: kyverno
@@ -98,7 +48,7 @@ jobs:
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
           path: policies
-      - name: Clone Kyverno
+      - name: Checkout Kyverno
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
         with:
           repository: kyverno/kyverno
@@ -114,6 +64,9 @@ jobs:
           set -e
           KYVERNO_EXPERIMENTAL=true go run ./cmd/cli/kubectl-kyverno fix test . --save
         working-directory: kyverno
+      - name: Check artifacthub-pkg digests
+        run: ./.hack/update-artifacthub-pkg.sh
+        working-directory: policies
       - name: Check diff
         run: |
           set -e
