chore: add the new CEL policies directory to the CI
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,7 @@ jobs:
           - other/res
           - other/s-z
           - pod-security
+          - pod-security-cel
           - psa
           - psp-migration
           # - tekton
