--- a/pod-security-cel/baseline/disallow-host-namespaces/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-host-namespaces/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - disallow-host-namespaces.yaml
 resources:
-- resource.yaml
+- ../pod-security/disallow-host-namespaces/resource.yaml
 results:
 - kind: CronJob
   policy: disallow-host-namespaces
