--- a/pod-security-cel/baseline/disallow-host-path/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-host-path/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - disallow-host-path.yaml
 resources:
-- resource.yaml
+- ../pod-security/disallow-host-path/resource.yaml
 results:
 - kind: CronJob
   policy: disallow-host-path
