--- a/pod-security-cel/baseline/disallow-host-process/02-manifests.yaml
+++ b/pod-security-cel/baseline/disallow-host-process/02-manifests.yaml
@@ -1,11 +1,11 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 apply:
-- file: pod-good.yaml
+- file: ../pod-security/disallow-host-process/pod-good.yaml
   shouldFail: false
-- file: pod-bad.yaml
+- file: ../pod-security/disallow-host-process/pod-bad.yaml
   shouldFail: true
-- file: podcontroller-good.yaml
+- file: ../pod-security/disallow-host-process/podcontroller-good.yaml
   shouldFail: false
-- file: podcontroller-bad.yaml
+- file: ../pod-security/disallow-host-process/podcontroller-bad.yaml
   shouldFail: true
