fix: modify resource paths
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/pod-security-cel/baseline/disallow-host-namespaces/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-host-namespaces/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - disallow-host-namespaces.yaml
 resources:
-- ../pod-security/disallow-host-namespaces/resource.yaml
+- ../../../pod-security/baseline/disallow-host-namespaces/resource.yaml
 results:
 - kind: CronJob
   policy: disallow-host-namespaces
