--- a/pod-security-cel/baseline/disallow-capabilities/kyverno-test.yaml
+++ b/pod-security-cel/baseline/disallow-capabilities/kyverno-test.yaml
@@ -5,7 +5,7 @@ metadata:
 policies:
 - disallow-capabilities.yaml
 resources:
-- ../pod-security/disallow-capabilities/resource.yaml
+- ../../../pod-security/baseline/disallow-capabilities/resource.yaml
 results:
 - kind: CronJob
   policy: disallow-capabilities
