--- a/pod-security-cel/baseline/disallow-host-ports/02-manifests.yaml
+++ b/pod-security-cel/baseline/disallow-host-ports/02-manifests.yaml
@@ -1,11 +1,11 @@
 apiVersion: kuttl.dev/v1beta1
 kind: TestStep
 apply:
-- file: ../pod-security/disallow-host-ports/pod-good.yaml
+- file: ../../../pod-security/baseline/disallow-host-ports/pod-good.yaml
   shouldFail: false
-- file: ../pod-security/disallow-host-ports/pod-bad.yaml
+- file: ../../../pod-security/baseline/disallow-host-ports/pod-bad.yaml
   shouldFail: true
-- file: ../pod-security/disallow-host-ports/podcontroller-good.yaml
+- file: ../../../pod-security/baseline/disallow-host-ports/podcontroller-good.yaml
   shouldFail: false
-- file: ../pod-security/disallow-host-ports/podcontroller-bad.yaml
+- file: ../../../pod-security/baseline/disallow-host-ports/podcontroller-bad.yaml
   shouldFail: true
