--- a/pod-security-cel/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
+++ b/pod-security-cel/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Baseline) in CEL
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.11.0
-    kyverno.io/kubernetes-version: "1.22-1.23"
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Host namespaces (Process ID namespace, Inter-Process Communication namespace, and
@@ -15,7 +15,7 @@ metadata:
       privileges. Pods should not be allowed access to host namespaces. This policy ensures
       fields which make use of these host namespaces are unset or set to `false`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: host-namespaces
