--- a/pod-security-cel/baseline/disallow-host-path/disallow-host-path.yaml
+++ b/pod-security-cel/baseline/disallow-host-path/disallow-host-path.yaml
@@ -8,13 +8,13 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod,Volume
     policies.kyverno.io/minversion: 1.11.0
-    kyverno.io/kubernetes-version: "1.22-1.23"
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       HostPath volumes let Pods use host directories and volumes in containers.
       Using host resources can be used to access shared data or escalate privileges
       and should not be allowed. This policy ensures no hostPath volumes are in use.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: host-path
