--- a/pod-security-cel/baseline/kustomization.yaml
+++ b/pod-security-cel/baseline/kustomization.yaml
@@ -5,3 +5,8 @@ resources:
   - disallow-host-ports/disallow-host-ports.yaml
   - disallow-host-ports-range/disallow-host-ports-range.yaml
   - disallow-host-process/disallow-host-process.yaml
+  - disallow-privileged-containers/disallow-privileged-containers.yaml
+  - disallow-proc-mount/disallow-proc-mount.yaml
+  - disallow-selinux/disallow-selinux.yaml
+  - restrict-seccomp/restrict-seccomp.yaml
+  - restrict-sysctls/restrict-sysctls.yaml
