Change roleRef pattern to subjects
Changed the roleRef in patterns to subjects as the system groups are defined under subjects and not roleRef

Signed-off-by: RanganMahesh <rangan502@gmail.com>
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

--- a/other/res/restrict-binding-system-groups/restrict-binding-system-groups.yaml
+++ b/other/res/restrict-binding-system-groups/restrict-binding-system-groups.yaml
@@ -29,7 +29,7 @@ spec:
       validate:
         message: "Binding to system:anonymous is not allowed."
         pattern:
-          roleRef:
+          subjects:
             name: "!system:anonymous"
     - name: restrict-unauthenticated
       match:
@@ -41,7 +41,7 @@ spec:
       validate:
         message: "Binding to system:unauthenticated is not allowed."
         pattern:
-          roleRef:
+          subjects:
             name: "!system:unauthenticated"
     - name: restrict-masters
       match:
@@ -53,5 +53,5 @@ spec:
       validate:
         message: "Binding to system:masters is not allowed."
         pattern:
-          roleRef:
+          subjects:
             name: "!system:masters"
