--- a/other/res/restrict-binding-system-groups/rb-bad.yaml
+++ b/other/res/restrict-binding-system-groups/rb-bad.yaml
@@ -3,12 +3,12 @@ kind: RoleBinding
 metadata:
   name: badrb01
 subjects:
-- kind: User
-  name: foo
+- kind: Group
+  name: "system:anonymous"
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: "system:anonymous"
+  name: foo
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -16,12 +16,13 @@ kind: RoleBinding
 metadata:
   name: badrb02
 subjects:
-- kind: ServiceAccount
-  name: foo
+- kind: Group
+  name: "system:unauthenticated"
   namespace: foo
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: "system:unauthenticated"
+  name: foo
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -29,10 +30,11 @@ kind: RoleBinding
 metadata:
   name: badrb03
 subjects:
-- kind: ServiceAccount
-  name: foo
+- kind: Group
+  name: "system:masters"
   namespace: foo
+  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: "system:masters"
+  name: foo
   apiGroup: rbac.authorization.k8s.io
