Fix syntax issue and resolve test casses
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

--- a/other/res/restrict-binding-system-groups/crb-bad.yaml
+++ b/other/res/restrict-binding-system-groups/crb-bad.yaml
@@ -30,7 +30,7 @@ kind: ClusterRoleBinding
 metadata:
   name: badcrb03
 subjects:
-- kind: ServiceAccount
+- kind: Group
   namespace: foo
   name: "system:masters"
   apiGroup: rbac.authorization.k8s.io
