--- a/other/res/restrict-binding-system-groups/crb-good.yaml
+++ b/other/res/restrict-binding-system-groups/crb-good.yaml
@@ -19,7 +19,6 @@ subjects:
 - kind: ServiceAccount
   namespace: foo
   name: foo-reader
-  apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
   name: manager
@@ -33,8 +32,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   namespace: foo
-  name: "system:foo"
-  apiGroup: rbac.authorization.k8s.io
+  name: "system.foo"
 roleRef:
   kind: ClusterRole
   name: manager
