Change roleRef pattern to subjects (#778)
* chore: add script to update artifacthub digest (#769)

* chore: add script to update artifacthub digest

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* script

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* install

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* install

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix digest

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

---------

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

* Change roleRef pattern to subjects

Changed the roleRef in patterns to subjects as the system groups are defined under subjects and not roleRef

Signed-off-by: RanganMahesh <rangan502@gmail.com>
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

* Update artifacthub-pkg.yml

Recalculated SHA256 and updated

Signed-off-by: RanganMahesh <rangan502@gmail.com>
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

* Updated files to match  new pattern

Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

* Sign-off commit

Signed-off-by: RanganMahesh <rangan502@gmail.com>
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

* Fix syntax issue and resolve test casses

Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

* Update SHA256 digest

Signed-off-by: Rangan Mahesh <rangan502@gmail.com>

---------

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>
Signed-off-by: Rangan Mahesh <rangan502@gmail.com>
Signed-off-by: RanganMahesh <rangan502@gmail.com>
Co-authored-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/other/res/restrict-binding-system-groups/crb-good.yaml
+++ b/other/res/restrict-binding-system-groups/crb-good.yaml
@@ -4,11 +4,11 @@ metadata:
   name: goodcrb01
 subjects:
 - kind: Group
-  name: manager
+  name: secret-reader
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
-  name: secret-reader
+  name: manager
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -18,10 +18,10 @@ metadata:
 subjects:
 - kind: ServiceAccount
   namespace: foo
-  name: manager
+  name: foo-reader
 roleRef:
   kind: ClusterRole
-  name: foo-reader
+  name: manager
   apiGroup: rbac.authorization.k8s.io
 
 ---
@@ -32,8 +32,8 @@ metadata:
 subjects:
 - kind: ServiceAccount
   namespace: foo
-  name: manager
+  name: "system.foo"
 roleRef:
   kind: ClusterRole
-  name: "system:foo"
+  name: manager
   apiGroup: rbac.authorization.k8s.io
