fix: Use Deployment selector for create-default-pdb
Signed-off-by: Mike Bryant <mike@mikebryant.me.uk>

--- a/other/b-d/create-default-pdb/create-default-pdb.yaml
+++ b/other/b-d/create-default-pdb/create-default-pdb.yaml
@@ -30,6 +30,4 @@ spec:
       data:
         spec:
           minAvailable: 1
-          selector:
-            matchLabels:
-              "{{request.object.metadata.labels}}"
+          selector: "{{request.object.spec.selector}}"
