Fix: Correct karpenter don't evict description
Signed-off-by: Paul O'Connor <465717+pauloconnor@users.noreply.github.com>

--- a/karpenter/add-karpenter-donot-evict/add-karpenter-donot-evict.yaml
+++ b/karpenter/add-karpenter-donot-evict/add-karpenter-donot-evict.yaml
@@ -14,7 +14,7 @@ metadata:
       If a Pod exists with the annotation `karpenter.sh/do-not-evict: true` on a Node,
       and a request is made to delete the Node, Karpenter will not drain any Pods from
       that Node or otherwise try to delete the Node. This is useful for Pods that should
-      run interrupted to completion. This policy mutates Jobs and CronJobs
+      run uninterrupted to completion. This policy mutates Jobs and CronJobs
       so that Pods spawned by them will contain the `karpenter.sh/do-not-evict: true` annotation.
 spec:
   rules:
