fix: use cel.expression.message instead of validate.message
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/pod-security-cel/baseline/disallow-host-path/disallow-host-path.yaml
+++ b/pod-security-cel/baseline/disallow-host-path/disallow-host-path.yaml
@@ -24,8 +24,7 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          HostPath volumes are forbidden. The field spec.volumes[*].hostPath must be unset.
         cel:
           expressions:
             - expression: "!has(object.spec.volumes) || object.spec.volumes.all(volume, !has(volume.hostPath))"
+              message: "HostPath volumes are forbidden. The field spec.volumes[*].hostPath must be unset"
