--- a/pod-security-cel/baseline/disallow-host-ports/disallow-host-ports.yaml
+++ b/pod-security-cel/baseline/disallow-host-ports/disallow-host-ports.yaml
@@ -24,22 +24,27 @@ spec:
             kinds:
               - Pod
       validate:
-        message: >-
-          Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
-          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
-          must either be unset or set to `0`.
         cel:
           expressions:
             - expression: >- 
                 object.spec.containers.all(container, !has(container.ports) || 
                 container.ports.all(port, !has(port.hostPort) || port.hostPort == 0))
+              message: >-
+                Use of host ports is disallowed. The field spec.containers[*].ports[*].hostPort
+                must either be unset or set to `0`.
 
             - expression: >- 
                 !has(object.spec.initContainers) || 
                 object.spec.initContainers.all(container, !has(container.ports) || 
                 container.ports.all(port, !has(port.hostPort) || port.hostPort == 0))
+              message: >-
+                Use of host ports is disallowed. The field spec.initContainers[*].ports[*].hostPort
+                must either be unset or set to `0`.
 
             - expression: >- 
                 !has(object.spec.ephemeralContainers) ||
                 object.spec.ephemeralContainers.all(container, !has(container.ports) ||
                 container.ports.all(port, !has(port.hostPort) || port.hostPort == 0))
+              message: >-
+                Use of host ports is disallowed. The field spec.ephemeralContainers[*].ports[*].hostPort
+                must either be unset or set to `0`.
