chore: install CRDs outside kuttl
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,6 +84,10 @@ jobs:
       - name: Wait for kyverno ready
         run: |
           kubectl wait --namespace kyverno --for=condition=ready pod --selector '!job-name' --timeout=60s
+      - name: Install CRDs
+        run: |
+          set -e
+          kubectl apply -f ./CRDs
       - name: Test with kuttl
         run: |
           ./.tools/kubectl-kuttl test ./${{ matrix.tests }} --config ./kuttl-test.yaml
