fix the name field in artifacthub-pkg.yaml
Signed-off-by: Mariam Fahmy <mariam.fahmy@nirmata.com>

--- a/pod-security-cel/restricted/restrict-seccomp-strict/artifacthub-pkg.yml
+++ b/pod-security-cel/restricted/restrict-seccomp-strict/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: restrict-seccomp-strict
+name: restrict-seccomp-strict-cel
 version: 1.0.0
 displayName: Restrict Seccomp (Strict) in CEL expressions
 description: >-
