--- a/pod-security-cel/restricted/restrict-volume-types/artifacthub-pkg.yml
+++ b/pod-security-cel/restricted/restrict-volume-types/artifacthub-pkg.yml
@@ -1,4 +1,4 @@
-name: restrict-volume-types
+name: restrict-volume-types-cel
 version: 1.0.0
 displayName: Restrict Volume Types in CEL expressions
 description: >-
