chore: migrate aws kuttl tests to chainsaw (#822)
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           - name: v1.28
             version: v1.28.0
         tests:
-          # - argo
+          - argo
           - aws
           - best-practices
           - castai
@@ -103,7 +103,7 @@ jobs:
             version: v1.28.0
         tests:
           - argo
-          # - aws
+          - aws
           # - best-practices
           # - castai
           - cert-manager
