chore: migrate castai kuttl tests to chainsaw (#823)
* chore: migrate castai kuttl tests to chainsaw

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* merge

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

---------

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,13 +27,13 @@ jobs:
           - name: v1.28
             version: v1.28.0
         tests:
-          - argo
-          - aws
+          # - argo
+          # - aws
           - best-practices
-          - castai
+          # - castai
           # - cert-manager
-          - consul
-          - external-secret-operator
+          # - consul
+          # - external-secret-operator
           - flux
           - istio
           - karpenter
@@ -105,10 +105,10 @@ jobs:
           - argo
           - aws
           # - best-practices
-          # - castai
+          - castai
           - cert-manager
-          # - consul
-          # - external-secret-operator
+          - consul
+          - external-secret-operator
           # - flux
           # - istio
           # - karpenter
