--- a/other/e-l/ensure-production-matches-staging/.chainsaw-test/chainsaw-test.yaml
+++ b/other/e-l/ensure-production-matches-staging/.chainsaw-test/chainsaw-test.yaml
@@ -17,6 +17,9 @@ spec:
     try:
     - apply:
         file: deployments.yaml
+    finally:
+    - sleep:
+        duration: 5s
   - name: step-03
     try:
     - apply:
