--- a/other/b-d/check-serviceaccount/.chainsaw-test/chainsaw-test.yaml
+++ b/other/b-d/check-serviceaccount/.chainsaw-test/chainsaw-test.yaml
@@ -36,7 +36,7 @@ spec:
           # Setting up the SA user
           export TOKEN_SA=`kubectl get secret safe-secret -n check-sa-ns -ojsonpath='{.data.token}' | base64 -d`
           kubectl config set-credentials safe-user --token=${TOKEN_SA}
-          kubectl config set-context safe-context --user=safe-user --cluster=cluster --namespace=check-sa-ns
+          kubectl config set-context safe-context --user=safe-user --cluster=kind-kind --namespace=check-sa-ns
 
           # Applying Manifests
           kubectl config use-context safe-context
@@ -46,7 +46,7 @@ spec:
           if kubectl apply -f podcontroller-bad.yaml; then exit 1; else echo "badpodcontrollers failed to create"; fi
 
           # Unset the context and user
-          kubectl config use-context cluster
+          kubectl config use-context kind-kind
           kubectl config unset contexts.safe-context
           kubectl config unset users.safe-user
   - name: step-99
