--- a/other/e-l/limit-configmap-for-sa/.chainsaw-test/chainsaw-test.yaml
+++ b/other/e-l/limit-configmap-for-sa/.chainsaw-test/chainsaw-test.yaml
@@ -31,12 +31,12 @@ spec:
     - script:
         content: |
           #!/bin/bash
-          set -euxv
+          set -eu
 
           # Setting up the SA user
           export TOKEN_SA=`kubectl get secret another-secret -n another-namespace -ojsonpath='{.data.token}' | base64 -d`
           kubectl config set-credentials another-user --token=${TOKEN_SA}
-          kubectl config set-context another-context --user=another-user --cluster=cluster --namespace=another-namespace
+          kubectl config set-context another-context --user=another-user --cluster=kind-kind --namespace=another-namespace
 
           # Applying Manifests
           if kubectl create --context=another-context -f cm-bad.yaml; then exit 1; else echo "success: bad cm failed to create by sa"; fi
@@ -46,7 +46,6 @@ spec:
           # Unset the context and user
           kubectl config unset contexts.another-context
           kubectl config unset users.another-user
-          echo "---------"
   - name: step-99
     try:
     - delete:
