--- a/other/m-q/only-trustworthy-registries-set-root/.chainsaw-test/chainsaw-test.yaml
+++ b/other/m-q/only-trustworthy-registries-set-root/.chainsaw-test/chainsaw-test.yaml
@@ -30,6 +30,9 @@ spec:
         - check:
             ($error != null): true
         file: podcontroller-bad.yaml
+    finally:
+    - sleep:
+        duration: 5s
   - name: step-99
     try:
     - delete:
