--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
           # - traefik
           # - velero
     runs-on: ubuntu-latest
-    name: chainsaw - ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
+    name: ${{ matrix.k8s-version.name }} - ${{ matrix.tests }}
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
